# dotfiles

./: .asciiowl.txt  .backup.sh  .bash_profile  .bspwm_move.sh  .bspwm_resize.sh  .condarc  .functions.sh  .gitconfig  .gitignore  .gitmode.sh  .profile  .pythonrc  .tmux.conf  .xmodmap  Cargo.toml  LICENSE.txt  README.md  disable_iptables.sh  environment.yml  gitmode  local.org  motd  org-mode.org  rust_crates.org
.config/alacritty/: alacritty.toml  alacritty.yml
.config/bspwm/: #bspwmrc#  bspwmrc  bspwmrc~
.config/cmus/: autosave  cache  command-history  lib.pl  search-history
.config/cmus/playlists/: default
.config/conky/: #conky.conf#  conky.conf  conky.conf.defaults  conky.conf~  conky.ip.conf  conky.ip.conf.defaults
.config/kitty/: kitty.conf
.config/mpd/: mpd.conf
.config/polybar/: config.ini  fonts.ini  get_spotify_status.sh  include-modules.ini  launch.sh  weather.sh
.config/polybar/modules/: backlight.ini  backlight.ini~  (+7 more)
.config/rmpc/: config.ron
.config/rofi/: config.rasi
.config/sxhkd/: sxhkdrc
.emacs.d/: init.el  package-activated-list.txt
.emacs.d/config_lisp_files/: TeX-config.el  chatgpt_shell_config.el  common-config.el  completion_config.el  dashboard_config.el  doom-modeline-config.el  flyspell-config.el  http-config.el  ispell_config.el  js-config.el  lsp-mode.el  multi-markdown.el  org-config.el  org-tree-slide-config.el  python-config.el  r-config.el  ruby-config.el  rust-config.el  splitwindows_startup.el  ssh-config.el  startup_splitwindows.el  treemacs-config.el  vertico-config-with-posframe-and-marginalia.el  webdocs.el
(+17 files in other folders)
